<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.legado.app.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="0dp"
        app:displayHomeAsUp="true"
        app:title="@string/tts_script_edit" />

    <io.legado.app.ui.widget.NoChildScrollNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <io.legado.app.ui.widget.text.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tts_script_name">

                <io.legado.app.lib.theme.view.ThemeEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </io.legado.app.ui.widget.text.TextInputLayout>

            <io.legado.app.ui.widget.text.TextInputLayout
                android:id="@+id/til_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tts_script_code">

                <io.legado.app.lib.theme.view.ThemeEditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:minLines="10"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </io.legado.app.ui.widget.text.TextInputLayout>

        </LinearLayout>
    </io.legado.app.ui.widget.NoChildScrollNestedScrollView>

</LinearLayout>
